[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "tyst_api_rest_health"
description = "TYST REST API EMP Health library"

[dependencies]
actix-web = { workspace = true, features = [] }
utoipa = { workspace = true, features = [] }
serde = { workspace = true, features = [] }
