[package]
name = "tyst_api_rest"
version = "0.0.0"
edition = "2021"
description = "TYST REST API"
license = "Apache-2.0 WITH FWM-Exception-1.0.0"

# Rename the default binary to "tyst-api-rest"
[[bin]]
name = "tyst-api-rest"
path = "src/main.rs"

[[bin]]
name = "openapi"
test = false
bench = false

[dev-dependencies]
# HTTP client lib used in examples and tests
ureq = { version = "2.10", default-features = true, features = ["json"] }

[dependencies]
tyst_api_rest_health = { path = "../tyst-api-rest-health", default-features = true, features = [] }
tyst = { path = "../tyst-core", default-features = true, features = [] }

# Async and concurrency
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal"] }
crossbeam-skiplist = { version = "0.1", default-features = true }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Logging
log = { version = "0.4", default-features = false, features = ["release_max_level_debug"] }
env_logger = { version = "0.11.1", default-features = false, features = [] }

# Config and platform info
config = { version = "0.14", default-features = false, features = ["json"] }
cgroups-rs = "0.3"

# REST API
actix-web = { version = "4.6", default-features = false, features = ["macros", "http2", "compress-brotli"] }
utoipa = { version = "5", features = ["actix_extras"] }
serde = { version = "1.0", default-features = false, features = ["std"] }
serde_json = "1.0"
serde_with = { version = "3.11", default-features = true, features = ["base64"] }
