[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "tyst_api_rest"
description = "TYST REST API"

# Rename the default binary to "tyst-api-rest"
[[bin]]
name = "tyst-api-rest"
path = "src/main.rs"

[[bin]]
name = "openapi"
test = false
bench = false

[dependencies]
tyst_api_rest_health = { path = "../tyst-api-rest-health", default-features = true, features = [] }
tyst = { path = "../tyst-core", default-features = true, features = [] }

# Async and concurrency
tokio = { workspace = true, features = [] }
crossbeam-skiplist = { workspace = true, features = [] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Logging and tracing
log = { workspace = true, features = [] }
env_logger = { workspace = true, features = [] }

# Config and platform info
config = { version = "0.15", default-features = false, features = ["json"] }
cgroups-rs = "0.3"

# REST API
actix-web = { workspace = true, features = [] }
utoipa = { workspace = true, features = [] }
serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
serde_with = { workspace = true, features = ["base64"] }

[dev-dependencies]
# HTTP client lib used in examples and tests
ureq = { workspace = true, features = ["json"] }
