[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "tyst"
description = "TYST Core"

[[bench]]
name = "all"
harness = false

[package.metadata.docs.rs]
all-features = true

[dependencies]

tyst_traits = { path = "../tyst-traits" }
tyst_oids = { path = "../tyst-oids" }
tyst_crypto = { path = "../tyst-crypto", optional = true }
tyst_ext_rust_crypto = { path = "../tyst-ext-rust-crypto", optional = true }
tyst_encdec = { path = "../tyst-encdec" }

# Logging and tracing
log = { workspace = true, features = [] }

crossbeam-skiplist = { workspace = true, features = [] }

# Rust nightly benchmark port to stable
# This should be possible to move to dev-deps
bencher = { version = "0.1", default-features = true, features = [] }

[dev-dependencies]
# Logging and tracing
env_logger = { workspace = true, features = [] }

# Parsing of test vectors
serde = { workspace = true, features = [] }
serde_with = { workspace = true, features = ["hex"] }
serde_json = { workspace = true, features = [] }

# Automatic resource download during testing
ureq = { workspace = true, features = [] }
url = { workspace = true, features = [] }

# Rust nightly benchmark port to stable
#bencher = { version = "0.1", default-features = true, features = [] }

[features]
default = ["internal", "external"]
internal = ["dep:tyst_crypto"]
external = ["dep:tyst_ext_rust_crypto"]
