[package]
name = "tyst_crypto"
version = "0.0.0"
edition = "2021"
description = "TYST Crypto Algorithm Implementations"
license = "Apache-2.0 WITH FWM-Exception-1.0.0"

[dependencies]

tyst_traits = { path = "../tyst-traits" }
tyst_encdec = { path = "../tyst-encdec" }

# Logging and tracing
log = { workspace = true, features = [] }
env_logger = { workspace = true, features = [] }

getrandom = { version = "0.2", default-features = false, features = [] }
constant_time_eq = { version = "0.3", default-features = false, features = [] }

# ASN.1
rasn = { workspace = true, features = [] }
rasn-pkix = { workspace = true, features = [] }

[dev-dependencies]
# Parsing of test vectors
serde = { version = "1.0", default-features = false, features = ["std"] }
serde_with = { version = "3.11", default-features = true, features = ["hex"] }
serde_json = "1.0"

# Automatic resource download during testing
ureq = { version = "2.10", default-features = true, features = [] }
url = { version = "2.5", default-features = true, features = [] }
