[package]
name = "tyst_crypto"
version = "0.0.0"
edition = "2021"
description = "TYST Crypto Algorithm Implementations"
license = "Apache-2.0 WITH AdditionRef-FWM-Exception-1.0.0"

[dependencies]

tyst_traits = { path = "../tyst-traits" }
tyst_encdec = { path = "../tyst-encdec" }

# Logging and tracing
log = { workspace = true, features = [] }

getrandom = { version = "0.2", default-features = false, features = [] }
constant_time_eq = { version = "0.3", default-features = false, features = [] }

# ASN.1
rasn = { workspace = true, features = [] }
rasn-pkix = { workspace = true, features = [] }

[dev-dependencies]
# Logging and tracing
env_logger = { workspace = true, features = [] }

# Parsing of test vectors
serde = { workspace = true, features = [] }
serde_with = { workspace = true, features = ["hex"] }
serde_json = { workspace = true, features = [] }

# Automatic resource download during testing
ureq = { workspace = true, features = [] }
url = { workspace = true, features = [] }
