[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "tyst_crypto"
description = "TYST Crypto Algorithm Implementations"

[dependencies]

tyst_traits = { path = "../tyst-traits" }
tyst_oids = { path = "../tyst-oids" }
tyst_encdec = { path = "../tyst-encdec" }

# Logging and tracing
log = { workspace = true, features = [] }

getrandom = { version = "0.3", default-features = false, features = [] }
constant_time_eq = { version = "0.3", default-features = false, features = [] }

# ASN.1
rasn = { workspace = true, features = [] }
rasn-pkix = { workspace = true, features = [] }
rasn-cms = { workspace = true, features = [] }

[dev-dependencies]
# Logging and tracing
env_logger = { workspace = true, features = [] }

# Parsing of test vectors
serde = { workspace = true, features = [] }
serde_with = { workspace = true, features = ["hex"] }
serde_json = { workspace = true, features = [] }

# Automatic resource download during testing
ureq = { workspace = true, features = [] }
url = { workspace = true, features = [] }
