[package]
name = "tyst_ext_rust_crypto"
version = "0.0.0"
edition = "2021"
#description = ""
license = "Apache-2.0 WITH FWM-Exception-1.0.0"

[dependencies]

tyst_traits = { path = "../tyst-traits" }
tyst_encdec = { path = "../tyst-encdec" }

log = { version = "0.4", default-features = false, features = ["release_max_level_debug"] }
env_logger = { version = "0.11.1", default-features = false, features = [] }

rand = { version = "0.8", default-features = true, features = [] }
rsa = { version = "0.9", default-features = true, features = ["sha2"] }
ecdsa = { version = "0.16", default-features = true, features = [] }
p384 = { version = "0.13", default-features = true, features = [] }
k256 = { version = "0.13", default-features = true, features = [] }
ed25519-dalek = { version = "2.1", default-features = true, features = ["pkcs8", "rand_core"] }
sha2 = { version = "0.10", default-features = true, features = [] }
ml-kem = { version = "0.2", default-features = true, features = [] }

# https://docs.rs/rasn/latest/rasn/
rasn = { version = "0.22", default-features = false, features = []  }
rasn-pkix = { version = "0.22", default-features = false, features = []  }

[dev-dependencies]
# Parsing of test vectors
serde = { version = "1.0", default-features = false, features = ["std"] }
serde_with = { version = "3.11", default-features = true, features = ["hex"] }
serde_json = "1.0"

# Automatic resource download during testing
ureq = { version = "2.10", default-features = true, features = [] }
url = { version = "2.5", default-features = true, features = [] }

# https://docs.rs/rasn/latest/rasn/
rasn = { version = "0.22", default-features = false, features = []  }
rasn-pkix = { version = "0.22", default-features = false, features = []  }
