[package]
name = "tyst_ext_rust_crypto"
version = "0.0.0"
edition = "2021"
#description = ""
license = "Apache-2.0 WITH AdditionRef-FWM-Exception-1.0.0"

[dependencies]

tyst_traits = { path = "../tyst-traits" }
tyst_encdec = { path = "../tyst-encdec" }

# Logging and tracing
log = { workspace = true, features = [] }

rand = { version = "0.8", default-features = true, features = [] }
rsa = { version = "0.9", default-features = true, features = ["sha2"] }
ecdsa = { version = "0.16", default-features = true, features = ["der"] }
p256 = { version = "0.13", default-features = true, features = [] }
p384 = { version = "0.13", default-features = true, features = [] }
k256 = { version = "0.13", default-features = true, features = [] }
ed25519-dalek = { version = "2.1", default-features = true, features = ["pkcs8", "rand_core"] }
sha2 = { version = "0.10", default-features = true, features = [] }
ml-kem = { version = "0.2", default-features = true, features = [] }

# ASN.1
rasn = { workspace = true, features = [] }
rasn-pkix = { workspace = true, features = [] }

[dev-dependencies]
# Logging and tracing
env_logger = { workspace = true, features = [] }

# Parsing of test vectors
serde = { workspace = true, features = [] }
serde_with = { workspace = true, features = ["hex"] }
serde_json = { workspace = true, features = [] }

# Automatic resource download during testing
ureq = { workspace = true, features = [] }
url = { workspace = true, features = [] }
