[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "tyst_traits"
description = "TYST Traits and Common Objects"

[dependencies]
# ASN.1
rasn = { workspace = true, features = [] }
rasn-pkix = { workspace = true, features = [] }
